--- a/ar/index.html
+++ b/ar/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <script src="aframe.min.js"></script>
-    <script src="gestures.js"></script>
-    <script src="aframe-ar.js"></script>
+    <script src="./service/aframe.min.js"></script>
+    <script src="./service/gestures.js"></script>
+    <script src="./service/aframe-ar.js"></script>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./main/style.css">
     <body>
         <div class="wrap">
-            <a class="btn" href="https://t.me/Wedding_DK_Bot" target="_blank">Click here!</a>
+            <a class="btn" href="https://t.me/Wedding_DK_Bot" target="_blank"><img class="heart" src="./main/heart.png" alt="heart"></a>
         </div>
 
         <a-scene arjs embedded renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector id="scene">
 
             <a-assets>
-                <a-asset-item id="bowser" src="bowser.glb"></a-asset-item>
+                <a-asset-item id="bowser" src="./service/bowser.glb"></a-asset-item>
             </a-assets>
 
-            <a-marker markerhandler preset="hiro" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;" id="markerA">
+            <a-marker preset="hiro" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;" id="markerA">
                 <a-entity position="0 0 0" rotation="0 0 0" scale="0.06 0.06 0.06" class="clickable" gesture-handler gltf-model="./Project Name/Project Name.gltf"></a-entity>
             </a-marker>
 
